# pyCRLD

./: .gitignore  CONTRIBUTING.md  README.md  conftest.py  index.html  pyproject.toml  riskreward.ipynb  robots.txt  search.json  settings.ini  sitemap.xml
.github/workflows/: test.yaml
Agents/: abase.html  apobase.html  apostrategyactorcritic.html  apostrategybase.html  astrategyactorcritic.html  astrategybase.html  astrategysarsa.html  avaluebase.html  avaluesarsa.html
Environments/: envbase.html  envecologicalpublicgood.html  envhistoryembedding.html  envrenewableressources.html  envriskreward.html  envsocialdilemma.html  envuncertainsocialdilemma.html
Utils/: uflowplot.html  uhelpers.html
nbdev-template-1.1.2/: index.ipynb
nbs/: _quarto.yml  index.ipynb  nbdev.yml  sidebar.yml
nbs/0images/: MAEi v2.key
nbs/Agents/: 01_AStrategyActorCritic.ipynb  02_AStrategySARSA.ipynb  03_APOStrategySarsa.ipynb  04_APOStrategyActorCritic.ipynb  05_AValueSARSA.ipynb  10_AStrategyBase.ipynb  10_AValueBase.ipynb  11_APOStrategyBase.ipynb  98_APOBase.ipynb  98_APOBase_commented.ipynb  99_ABase.ipynb  99_TRY_HETERO_AGENTS_BASE.ipynb
nbs/Environments/: 00_EnvBase.ipynb  01_EnvHistoryEmbedding.ipynb  02_HeterogeneousObservationsEnv.ipynb  02_MultipleObservationsEnv.ipynb  10_EnvSocialDilemma.ipynb  11_EnvEcologicalPublicGood.ipynb  12_EnvPOSocialDilemma.ipynb  12_EnvUncertainSocialDilemma.ipynb  12_MultipleObsSocialDilemma.ipynb  13_EnvRenewableRessources.ipynb  13_EnvRiskReward.ipynb  20_Explorations_het_AC.ipynb
pyCRLD/: _modidx.py
test/: pyvenv.cfg
(+24 files in other folders)
